src/c/dynamics.h

/**
 * @brief A multi-frame link used by a closed-loop mechanism.
 */
typedef struct
{
    /**
     * Number of frames attached to the link.
    */
    int frame_count;
    /**
     * 4-by-4-by-frame_count frame transforms in column-major storage.
    */
    double *frames;     // 4-by-4-by-frame_count array in column-major format
    /**
     * Link mass.
    */
    double mass;
    /**
     * Center-of-gravity position in the link frame.
    */
    double cg[3];
    /**
     * 3-by-3 inertia matrix in column-major storage.
    */
    double inertia[9];  // 3-by-3 matrix in column-major format
} c_mechanism_link;
/**
 * @brief A joint connecting two mechanism link frames.
 */
typedef struct
{
    /**
     * Joint type, such as DYN_REVOLUTE_JOINT or DYN_FIXED_JOINT.
    */
    int joint_type;     // DYN_REVOLUTE_JOINT, DYN_PRISMATIC_JOINT, etc.
    /**
     * One-based parent link index.
    */
    int parent_link;    // one-based index of the parent link
    /**
     * One-based parent-frame index.
    */
    int parent_frame;   // one-based index of the frame on the parent link
    /**
     * One-based child link index.
    */
    int child_link;     // one-based index of the child link
    /**
     * One-based child-frame index.
    */
    int child_frame;    // one-based index of the frame on the child link
    /**
     * Whether the joint variable is actuated.
    */
    bool actuated;
} c_joint;
/**
 * @brief Opaque handle to a closed-loop mechanism. Create handles with
 * `c_create_parallel_linkage` or `c_create_planar_linkage`, and release them
 * with `c_free_mechanism`.
 */
typedef void* c_mechanism;
/**
 * Create a spatial parallel linkage mechanism.
 * @param nlinks Link count.
 * @param links Link definitions.
 * @param njoints Joint count.
 * @param joints Joint definitions.
 * @param base One-based base-link index.
 * @param effector One-based end-effector link index.
 * @param tool Tool transform.
 * @param ldt Leading dimension of tool.
 * @return Opaque mechanism handle, or NULL on failure.
 */
c_mechanism c_create_parallel_linkage(int nlinks, const c_mechanism_link *links,
    int njoints, const c_joint *joints, int base, int effector,
    const double *tool, int ldt);
/**
 * Create a planar parallel linkage mechanism.
 * @param nlinks Link count.
 * @param links Link definitions.
 * @param njoints Joint count.
 * @param joints Joint definitions.
 * @param base One-based base-link index.
 * @param effector One-based end-effector link index.
 * @param tool Tool transform.
 * @param ldt Leading dimension of tool.
 * @return Opaque mechanism handle, or NULL on failure.
 */
c_mechanism c_create_planar_linkage(int nlinks, const c_mechanism_link *links,
    int njoints, const c_joint *joints, int base, int effector,
    const double *tool, int ldt);
/**
 * Release a mechanism handle.
 * @param obj Mechanism handle.
 */
void c_free_mechanism(c_mechanism obj);
/**
 * Return the number of links in a mechanism.
 * @param obj Mechanism handle.
 * @return Link count.
 */
int c_mechanism_link_count(c_mechanism obj);
/**
 * Return the number of joints in a mechanism.
 * @param obj Mechanism handle.
 * @return Joint count.
 */
int c_mechanism_joint_count(c_mechanism obj);
/**
 * Return the number of mechanism variables.
 * @param obj Mechanism handle.
 * @return Variable count.
 */
int c_mechanism_variable_count(c_mechanism obj);
/**
 * Return the number of independent loops.
 * @param obj Mechanism handle.
 * @return Loop count.
 */
int c_mechanism_loop_count(c_mechanism obj);
/**
 * Return the number of constraint equations.
 * @param obj Mechanism handle.
 * @return Constraint count.
 */
int c_mechanism_constraint_count(c_mechanism obj);
/**
 * Return mechanism degrees of freedom.
 * @param obj Mechanism handle.
 * @return Degrees of freedom.
 */
int c_mechanism_degrees_of_freedom(c_mechanism obj);
/**
 * Return the number of actuated variables.
 * @param obj Mechanism handle.
 * @return Actuated-variable count.
 */
int c_mechanism_actuated_variable_count(c_mechanism obj);
/**
 * Return the mechanism spatial dimension.
 * @param obj Mechanism handle.
 * @return Space dimension.
 */
int c_mechanism_space_dimension(c_mechanism obj);
/**
 * Return the frame count for a link.
 * @param obj Mechanism handle.
 * @param i One-based link index.
 * @return Frame count.
 */
int c_mechanism_link_frame_count(c_mechanism obj, int i);
/**
 * Return a link-frame transform.
 * @param obj Mechanism handle.
 * @param i One-based link index.
 * @param k One-based frame index.
 * @param T Output transform.
 * @param ldt Leading dimension of T.
 */
void c_mechanism_link_frame(c_mechanism obj, int i, int k, double *T, int ldt);
/**
 * Get the current mechanism configuration.
 * @param obj Mechanism handle.
 * @param n Configuration length.
 * @param q Output configuration.
 */
void c_mechanism_get_configuration(c_mechanism obj, int n, double *q);
/**
 * Set the mechanism configuration.
 * @param obj Mechanism handle.
 * @param n Configuration length.
 * @param q Configuration values.
 */
void c_mechanism_set_configuration(c_mechanism obj, int n, const double *q);
/**
 * Evaluate a body transform at a configuration.
 * @param obj Mechanism handle.
 * @param i One-based body index.
 * @param n Configuration length.
 * @param q Configuration values.
 * @param T Output transform.
 * @param ldt Leading dimension of T.
 */
void c_mechanism_body_transform(c_mechanism obj, int i, int n, const double *q,
    double *T, int ldt);
/**
 * Evaluate the end-effector transform.
 * @param obj Mechanism handle.
 * @param n Configuration length.
 * @param q Configuration values.
 * @param T Output transform.
 * @param ldt Leading dimension of T.
 */
void c_mechanism_end_effector_transform(c_mechanism obj, int n, 
    const double *q, double *T, int ldt);